--- a/assign2/css.css
+++ b/assign2/css.css
@@ -3,28 +3,27 @@ body {
 /*	background:url(image/bg.png) top center no-repeat fixed ;*/
 	background:rgba(204,204,204,1);
 }
-#hd_photo {
-	margin:19px;
-	float:left;
-	border-radius: 5px;
-	border:rgba(153,153,153,1) thin solid ;
-	box-shadow: 0 8px 6px -6px #999;
-	box-sizing:border-box;
-	
-}
-
 #banner {
 	background:rgba(255,255,255,1);
 	border-radius: 4px;
 	border:rgba(153,153,153,1) thin solid ;
 	box-shadow: 0 8px 6px -6px #999;
-	padding:5px;
 	margin-top : 20px;
 	margin-bottom: 20px;
 }
 
 #banner h1 {
 	color:blue;
+}
+#hd_photo {
+	margin:20px;
+	height:200px;
+	overflow:hidden;
+	float:left;
+	border-radius: 5px;
+	border:rgba(153,153,153,1) thin solid ;
+	box-shadow: 0 8px 10px -6px #999;
+	box-sizing:border-box;
 }
 #bookmarks {
 	font-size:medium;
@@ -38,7 +37,8 @@ body {
 	box-sizing:border-box;
 	
 }
-#edu{}
+
+
 
 .tag{
 	background:rgba(255,255,255,1);
@@ -50,47 +50,55 @@ body {
 }
 .tag h1 {
 	font-size:18px;
-	line-height:80%;
-
-	
+	line-height:80%;	
 }
-	
-
 .classBox {
 	background:rgba(255,255,255,1);
 	border-radius: 0px 4px 4px 4px;
-	padding:10px;
-	
 	box-shadow: 0 8px 6px -6px #999;
 	box-sizing: border-box;
 	margin-bottom:20px;
 }
+
+#edu{}
 .edu {
-	padding:1%;
+	margin:1.6% 0 1.6% 1.6%;
 	background:rgba(255,204,255,1);
-	margin:1%;
-	width:21%;
+	width:23%;
 	float:left;
 	display:block;
 }
-
+#activities {}
 .act {
-	padding:1%;
+	margin:1.6% 0 1.6% 1.6%;
 	background:rgba(204,255,153,1);
-	margin:1%;
-	width:28%;
+	width:31.2%;
 	float:left;
 	display:block;	
 }
 
-
-#interests {
-	padding:1%;
-}
+#interests {}
 .init {
+	margin:1.6% 0 1.6% 1.6%;
 	float:left;
-	width:46%;
+	width:47.6%;
 	background:rgba(102,255,204,1);
-	padding:1%;
-	margin:1%;
+}
+
+.inBox {
+	overflow:hidden;
+	margin:10px;
+}
+.inBox h1 {
+	line-height:100%;
+}
+
+.img {
+	float:left;
+	overflow:hidden;
+	
+}
+#interests .inBox .img {
+	height:100px;
+	margin-right:10px;
 }
