--- a/assign4_JSON/css/custom.css
+++ b/assign4_JSON/css/custom.css
@@ -3,6 +3,13 @@
 {
 	margin-top:70px;
 }
+h2 {color:#FF9900;}
+
+.b {
+	color:#FF0000;
+	font-weight:bolder;
+}
+
 
 .locate
 {
@@ -13,9 +20,10 @@
 
 .box 
 {
+	border-radius:10px;
 	padding:3%;
 	float:left;
-	background:#CCCCCC;
+	background:#FFFFCC;
 	width:86.5%;
 	margin-left:5%;
 	margin-right:2.5%;
