--- a/assign4/CSS/FriendLists.css
+++ b/assign4/CSS/FriendLists.css
@@ -30,9 +30,8 @@ body{
 }
 			
 #FriendList span{
-	line-height:300%
-	float:left;
-	font-size:16px;
+	float:right;
+	font-size:12px;
 }
 			
 #FriendList ul div:hover{
