--- a/Final/css/parallax.css
+++ b/Final/css/parallax.css
@@ -8,6 +8,9 @@ body { padding:0; margin:0;}
 .w960 {	width:960px;}
 .w300{width:300px;}
 
+.w80p { width:80%; padding:5%;  max-width:960px;}
+
+
 .aCenter {	margin: auto;}
 .aLeft {	}
 .aRight {	margin-left:70%;}
