--- a/Final/css/parallax.css
+++ b/Final/css/parallax.css
@@ -1,8 +1,15 @@
 /* CSS Document */
-body { padding:0; margin:0;}
+body {
+	padding: 0;
+	margin: 0;
+	font-family: "Times New Roman", Times, serif;
+}
 
 .layer {	position:absolute;}
-.layerInner{	position:relative;}
+.layerInner{ position:relative;}
+.layerInInner { position:absolute;}
+
+.bg { position:absolute; background-size:cover; width:100%; height:768px; background-repeat:no-repeat;}
 
 .wMax {width:100%}
 .w960 {	width:960px;}
@@ -11,12 +18,12 @@ body { padding:0; margin:0;}
 .w80p { width:80%; padding:5%;  max-width:960px;}
 
 
-.aCenter {	margin: auto;}
-.aLeft {	}
+.aCenter {	margin: auto; text-align:center;}
+.aLeft {}
 .aRight {	margin-left:70%;}
 
 div,article,p { overflow:hiidden;}
-
+a , a:hover { text-decoration:none;}
 
 .twnAbs { position:absolute; display:block;}
 .twnFix { position:absolute;}
