--- a/Final/css/parallax.css
+++ b/Final/css/parallax.css
@@ -1,6 +1,6 @@
 /* CSS Document */
 
-
+.flower { background:url(../img/rose.png) top center no-repeat; width:256px; height:256px;  margin:0}
 body { padding: 0px;	margin: 0px;	font-family: "Times New Roman", Times, serif; height:100%;}
 #container { width:100%; overflow:hidden;}
 .layer {	position:absolute; width:100%; height:100%;}
