--- a/Final/css/parallax.css
+++ b/Final/css/parallax.css
@@ -12,11 +12,11 @@ body { padding: 0px;	margin: 0px;	font-family: "Times New Roman", Times, serif; 
 .cover { background-size:cover;}
 
 #nav {width:100%; height:230px; background:#333333; display:none; box-shadow:4px 4px 3px rgba(0,0,0,0.5);}
-.chBtn { display:block; width:12.9%; background-color: rgba(155, 155, 0, 0.5);; border: thin solid #FFFFFF ; border-radius:5px; height:160px; margin:1.2%; margin-right:0px; float:left; opacity:.7 }
+.chBtn { display:block; width:12.5%; background-color: rgba(155, 155, 0, 0.5);; border: thin solid #FFFFFF ; border-radius:5px; height:160px; margin:1.2%; margin-right:0px; float:left; opacity:.7 }
 .chBtn:hover { opacity:1; color:#FFFFFF;}
 #hideNav:hover { opacity:.8; background:#666666;}
 
-#toHome { background-image:url(../img/bg/title/Home.png); background-size:cover;}
+#toHome { background-image:url(../img/bg/title/home.png); background-size:cover;}
 #toCh1 { background-image:url(../img/bg/title/ch1.png); background-size:cover;}
 #toCh2 { background-image:url(../img/bg/title/ch2.png); background-size:cover;}
 #toCh3 { background-image:url(../img/bg/title/ch3.png); background-size:cover;}
