--- a/Teachers/Robin/css/robin-all.css
+++ b/Teachers/Robin/css/robin-all.css
@@ -13,15 +13,15 @@ p{ margin:0 ; padding:0;}
 .langBtn { color:white; display:inline-block;padding:5px;}
 .langBtn:hover {  cursor:pointer;  }
 
-#nav { margin:0; padding:0px; position:absolute; top:250px; width:100%; background: rgba(51,51,51,.4); }
-#nav li { padding:8px; color:white; display:inline-block; width:14%; height:100%; font-family:'微軟正黑體';}
+#nav { margin:0; padding:0px; position:absolute; top:260px; width:100%; background: rgba(51,51,51,.4); }
+#nav li { padding:10px 0px; color:white; display:inline-block; width:14%; height:100%; font-family:'微軟正黑體';}
 #nav li:hover { background:rgba(51,51,51,.5);cursor:pointer;}
 #nav li p { display:block ; text-align:center;}
 #nav .active { background:rgba(51,51,51,.7);}
 
 #content { width:70%; padding-top:20px; background-color:white; float:left; position:relative; border-right:thin #666666 dashed ; box-sizing:border-box;}
 #content article { padding-left:20px; margin-right:10px; margin-bottom:30px;}
-#content article h3 { font-family:'微軟正黑體';}
+#content article h3 { font-family:'微軟正黑體'; color:#0066CC;}
 
 #content .publist li { margin-bottom:5px;}
 
@@ -33,7 +33,7 @@ p{ margin:0 ; padding:0;}
 #something { width:100%;}
 #something article { margin:5px 5px 0px 5px; border:solid #CCCCCC thin; box-shadow: 0px 0px 1px 1px #999999;  }
 
-#footer { background-color:#999999; width:100%; clear:both; color:white; display:block;}
+#footer { background-color:rgba(0,0,0,.85); width:100%; clear:both; color:white; display:block;}
 #footer > .inner { padding:20px 20px;}
 
 .searchIcon { background-image:url(../img/other/glyphicons_027_search.png); width:24px; height:24px; background-size:cover !important; display:inline-block; }
