--- a/Teachers/Robin/css/robin-all.css
+++ b/Teachers/Robin/css/robin-all.css
@@ -1,6 +1,11 @@
-body { background-image:url(../img/fabric_plaid.png); font-size:small;}
+/* reset bootStrap */
+li { line-height:150%; }
+
+
+/* mine */
+body { background-image:url(../img/fabric_plaid.png); font-size:16px; line-height:150%;}
 p{ margin:0 ; padding:0;}
-#container { width:960px; margin:auto; box-shadow: 0 0 20px 1px #888; background-color:#FFFFFF;position:relative	;}
+#container { width:1000px; margin:auto; box-shadow: 0 0 20px 1px #888; background-color:#FFFFFF;position:relative	;}
 
 
 #headBtns { margin:10px 0px; position:absolute; width:100%;}
@@ -19,14 +24,14 @@ p{ margin:0 ; padding:0;}
 #nav li p { display:block ; text-align:center;}
 #nav .active { background:rgba(51,51,51,.7);}
 
-#content { width:70%; padding-top:20px; background-color:white; float:left; position:relative; border-right:thin #666666 dashed ; box-sizing:border-box;}
+#content { width:73%; padding-top:20px; background-color:white; float:left; position:relative; border-right:thin #666666 dashed ; box-sizing:border-box;}
 #content article { padding-left:20px; margin-right:10px; margin-bottom:30px;}
 #content article h3 { font-family:'微軟正黑體'; color:#0066CC;}
 
-#content .publist li { margin-bottom:5px;}
+#content .publist li { margin-bottom:0.4em;}
 
 
-#rightArea { width:30%; float:left; height:300px; position:relative; }
+#rightArea { width:27%; float:left; height:300px; position:relative; }
 #subNav { padding:0px; padding-top:20px; margin-left:0px; width:100%; display:block; position:static;}
 #subNav li { padding:5px; border-bottom:#666666 dashed thin; list-style-position:inside; padding-left:20px; list-style-image:url(../img/other/glyphicons_062_paperclip.png);}
 #subNav li:first-child {border-top:#666666 dashed thin;}
