--- a/TEDx/css/tedxnccu2.css
+++ b/TEDx/css/tedxnccu2.css
@@ -1,6 +1,7 @@
 /* CSS Document */
 body {  }
 .outer { padding:40px 0px ;}  /*用在padding 上下*/
+.outer-small { padding:20px 0px;}
 .container { width:960px; margin:auto; padding:0px 20px;}
 
 
@@ -35,8 +36,8 @@ h3 { color:red; font-family:'微軟正黑體';}
 .subNav > li >a:hover { color:red;}
 .subNav:hover , .withSubNav:hover > .subNav { display:block;}
 
-.leftArea  { float:left; width:620px; padding-right:40px;}
-.rightArea { float:right; width:300px; }
+.leftArea  { float:left; width:680px; padding-right:40px;}
+.rightArea { float:right; width:240px; }
 .rightArea > .rit-ara-box { width:100%; margin-bottom:20px;}
 
 .alignRightUL { width:100%;}
@@ -81,35 +82,32 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 #mainNav > li > .subNav { background:rgba(35,35,35,.9)}
 
 #banner { position:relative;}
-.bannerPic { width:100%; background-image:url(../../image/7445668486_2ffafcff86_o.jpg); background-position:center center; background-size:cover; height:500px; position:absolute; z-index:3;}
-.box { padding:20px;}
-.bannerInfo { color:white; background:rgba(0,0,0,.7); z-index:5; position:absolute; right:0px; width:500px; min-height:150px; bottom:-80px;}
-.bannerInfo > h3 { color:#FF0000;}
-.subBanner { background: rgb(150,150,150); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(150,150,150,1) 0%, rgba(204,204,204,1) 17%, rgba(255,255,255,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(150,150,150,1)), color-stop(17%,rgba(204,204,204,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(150,150,150,1) 0%,rgba(204,204,204,1) 17%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(150,150,150,1) 0%,rgba(204,204,204,1) 17%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(150,150,150,1) 0%,rgba(204,204,204,1) 17%,rgba(255,255,255,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(150,150,150,1) 0%,rgba(204,204,204,1) 17%,rgba(255,255,255,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#969696', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */}
+.bannerPic { width:100%; background-position:center center; background-size:cover; height:500px; position:absolute; z-index:3;}
+.box { padding:30px;}
+.block { background:white; box-shadow:3px 3px 5px 5px #D5D5D5;
+}
+.block-2 {  background:rgba(255,255,255,.5);}
+.subBanner {}
 
 hr { display:block; width:100%; background:url(../img/hr.png) top center no-repeat; height:3px; border:none; background-size:contain; }
 
-#hotMovList >li { width:280px; margin-right:60px;}
+#hotMovList >li { width:280px; margin-right:30px;}
 #hotMovList >li:nth-child(3n) { margin-right:0px !important;}
 
-footer { background:url(../img/footer.jpg) center;; background-size:cover;}
+footer { background:url(../img/footerBG.png) center;}
 
 /* content-page*/
 .bannerPic-small { width:100%; background-image:url(../../image/7445668486_2ffafcff86_o.jpg); background-position:center center; background-size:cover; height:250px; position:relative; z-index:3;}
 
-.bg  { background:url(../img/bg.jpg) repeat-y center ; background-size:contain;}
+.bg  { background:url(../img/pixel_weave.png);}
 .shd { box-shadow:0px 0px 5px 1px #999999 ; position:relative; z-index:1px;}
+.shd-large { box-shadow:0px 0px 20px 10px  #ABABAB ; }
 
 /*article*/
-.art-pre { width:620px; padding:20px 0px;}
+.art-pre { width:680px; margin-bottom:20px; background-color:rgba(255,255,255,.8); 
+}
 .art-pre-pic { margin-right:20px; float:left; box-shadow:0px 2px 5px 1px #999999; height:150px; }
+.art-pre-info { padding:12px;}
 .art-pre-info > h3 { margin-bottom:10px; color:#FF0000; font-size:1.2em;}
 .art-pre-info > p { color:#999999;}
 
@@ -117,3 +115,6 @@ footer { background:url(../img/footer.jpg) center;; background-size:cover;}
 /* FOR TITLE*/
 .tag { background-color:RED ; padding:5px; border:1px #660000 solid ; color:white; display:inline-block; -webkit-transform:rotate(-4deg);}
 .tag2 { background:white; padding:5px; border:#CCCCCC solid 1px; color:RED; display:inline-block;  }
+
+/* For Footer*/
+.foot_nav  a { color:#C0C0C0; padding-right:20px; display:block; }
