--- a/TEDx/css/reset.css
+++ b/TEDx/css/reset.css
@@ -45,10 +45,13 @@ table {
 }
 
 /* my reset*/
+h1,h2,h3 { margin:0px 0px 10px 0px; display:block;}
+
 h1 { font-size:2.5em; }
 h2 { font-size:2em;}
 h3 { font-size:1.5em;}
 
+p{ margin:10px 0px 15px 0px ; }
 
 
 .btn { text-decoration:none; display:block; color:#000000;}
