--- a/TEDx/css/tedxnccu2.css
+++ b/TEDx/css/tedxnccu2.css
@@ -2,7 +2,8 @@
 body {  }
 .outer { padding:40px 0px ;}  /*用在padding 上下*/
 .outer-small { padding:20px 0px;}
-.container { width:960px; margin:auto; padding:0px 20px;}
+.container { width:960px; margin:auto;}
+.padding { padding:0px 20px;}
 
 
 
@@ -117,12 +118,6 @@ background:url(../img/bg.jpg); background-size:contain;
 .shd { box-shadow:0px 0px 5px 1px #999999 ; position:relative; z-index:1px;}
 .shd-large { box-shadow:0px 0px 20px 10px  #ABABAB ; }
 
-/*article*/
-.art-pre { width:680px; margin-bottom:20px; background-color:rgba(255,255,255,.8);}
-.art-pre-pic { margin-right:20px; float:left; box-shadow:0px 2px 5px 1px #999999; height:150px; }
-.art-pre-info { padding:12px;}
-.art-pre-info > h3 { margin-bottom:10px; color:#FF0000; font-size:1.2em; font-weight:bold;}
-.art-pre-info > p { color:black;}
 
 
 /* FOR TITLE*/
