--- a/TEDx/include/footer.html
+++ b/TEDx/include/footer.html
@@ -12,6 +12,6 @@
 			<li><a href="../act/FromIdeaToAction.html">From Idea to Action</a></li>
 			<li><a href="../sponsor.html">贊助我們</a></li>
 			<li><a href="../contact.html">聯絡我們</a></li>
-			<li><a href="../manageLogin.html">管理模式</a></li>
+			<li><a href="../manage/login.html">管理模式</a></li>
 		</ul>
 	</div>
