--- a/TEDx/css/tedxnccu2.css
+++ b/TEDx/css/tedxnccu2.css
@@ -1,5 +1,7 @@
 /* CSS Document */
-body {  }
+body {
+	font-family: inherit;
+}
 .outer { padding:40px 0px ;}  /*用在padding 上下*/
 .outer-small { padding:20px 0px;}
 .container { width:960px; margin:auto;}
@@ -86,7 +88,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 
 #mainNav > li > .subNav { background:rgba(35,35,35,.9)}
 
-#banner { position:relative; background:#181818}
+#banner { position:relative; background:#181818;}
 .bannerPic { width:100%; background-position:center center; background-size:cover; height:540px; position:absolute; z-index:3;}
 .bannerPic-small { width:100%; background-image:url(../../image/7445668486_2ffafcff86_o.jpg); background-position:center center; background-size:cover; height:150px; position:relative; z-index:0; background:url(../img/footer.jpg);}
 .bannerPic-small-cover { width:100%; position:absolute;z-index:4; background:rgba(0,0,0,.5); height:150px;}
@@ -101,10 +103,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 .subBanner {
 }
 
-hr { display:block; width:100%; background:url(../img/hr.png) top center no-repeat; height:3px; border:none; background-size:contain; }
-
-#hotMovList >li { width:280px; margin-right:30px;}
-#hotMovList >li:nth-child(3n) { margin-right:0px !important;}
+/*#hotMovList >li:nth-child(3n) { margin-right:0px !important;}*/
 
 footer { background:url(../img/footerBG.png) center; display:block;}
 
@@ -133,3 +132,11 @@ background:url(../img/bg.jpg); background-size:contain;
 /*8.20*/
 
 .content-img { position:relative; width:900px;}
+
+
+/* for blogs*/
+.art-pre { width:auto; margin-bottom:20px; background-color:rgba(255,255,255,.8);}
+.art-pre-pic { margin-right:20px; margin-bottom:20px; float:left; box-shadow:0px 2px 5px 1px #999999; height:200px; }
+.art-pre-info { padding:20px; width:auto;}
+.art-pre-info > h3 { margin-bottom:10px; color:#FF0000; font-size:1.2em; font-weight:bold;}
+.art-pre-info > p { color:black; margin-bottom:0px;}
