--- a/Teachers/PostModern/css/PostModern.css
+++ b/Teachers/PostModern/css/PostModern.css
@@ -28,7 +28,7 @@ body { margin:0; padding:0; font-family:"微軟正黑體"}
 #nav, header { width:100%; }
 .withSubNav , #aboutBtn { position:relative;}
 
-.subNav { min-width:100px; max-width:150px; border-radius:5px;  overflow:hidden; background:#FFFFFF; display:none; position:absolute; top:42px; z-index:20; box-shadow:0px 0px 5px 2px #CCCCCC;}
+.subNav { min-width:120px; max-width:150px; border-radius:5px;  overflow:hidden; background:#FFFFFF; display:none; position:absolute; top:42px; z-index:20; box-shadow:0px 0px 5px 2px #CCCCCC;}
 .subNav > li { width:100%;}
 .subNav > li > a{padding:5px;}
 .subNav > li:last-child { border:0;}
@@ -93,6 +93,15 @@ footer { background-image:url(../img/fabric_plaid.png);background-image:url(../i
 
 
 /* about*/
+.article { width:auto;}
+.article > p { line-height:1.8em; text-indent:2em }
+.withImg { margin-top:100px;}
+.withImg  .art {  float:left; width:55%; }
+.withImg h3 { margin-top:0px;}
+.art > p {line-height:2em; color:gray;}
+.withImg  .img {float:left; width:40%;}
+.withImg  .img  > img { width:100%; border-radius:10px; max-height:250px; overflow:hidden;}
+.withImg .f { margin-right:5%;}
 
 #about_Inner { margin-top:30px;}
 
