--- a/TEDx/css/tedxnccu2.css
+++ b/TEDx/css/tedxnccu2.css
@@ -53,7 +53,7 @@ h2, h3 { color:red; font-family:'微軟正黑體';}
 
 
 
-.bread {padding:10px 0px; background:url(../img/fabric_plaid.png);}
+.bread {padding:10px 0px; background:url(../img/bg/fabric_plaid.png);}
 
 
 a , a:hover , a:checked , a:visited , a:active , a:focus , a:link { text-decoration:none; }
@@ -90,7 +90,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 
 #banner { position:relative; background:#181818;}
 .bannerPic { width:100%; background-position:center center; background-size:cover; height:540px; position:absolute; z-index:3;}
-.bannerPic-small { width:100%; background-image:url(../../image/7445668486_2ffafcff86_o.jpg); background-position:center center; background-size:cover; height:150px; position:relative; z-index:0; background:url(../img/footer.jpg);}
+.bannerPic-small { width:100%; background-image:url(../../image/7445668486_2ffafcff86_o.jpg); background-position:center center; background-size:cover; height:150px; position:relative; z-index:0; background:url(../img/bg/footer.jpg);}
 .bannerPic-small-cover { width:100%; position:absolute;z-index:4; background:rgba(0,0,0,.5); height:150px;}
 .bannerPic-small-cover > .container { position:relative;}
 .bannerPic-small-cover > .container  > .title { position:relative; top:20px; margin-bottom:20px;  display:inline-block; padding:1%; background:rgba(0,0,0,0); -webkit-transform:rotate(1deg);; }
@@ -105,14 +105,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 
 /*#hotMovList >li:nth-child(3n) { margin-right:0px !important;}*/
 
-footer { background:url(../img/footerBG.png) center; display:block;}
+footer { background:url(../img/bg/footerBG.png) center; display:block;}
 
 /* content-page*/
 
 .bg  { 
-background:url(../img/pixel_weave.png);
-background:url(../img/footer.jpg); background-size:contain;
-background:url(../img/bg.jpg); background-size:contain;
+background:url(../img/bg/pixel_weave.png);
+background:url(../img/bg/footer.jpg); background-size:contain;
+background:url(../img/bg/bg.jpg); background-size:contain;
 }
 .shd { box-shadow:0px 0px 5px 1px #999999 ; position:relative; z-index:1px;}
 .shd-large { box-shadow:0px 0px 20px 10px  #ABABAB ; }
@@ -121,6 +121,8 @@ background:url(../img/bg.jpg); background-size:contain;
 
 /* FOR TITLE*/
 .tag { background-color:RED ; padding:5px; border:1px #660000 solid ; color:white; display:inline-block; -webkit-transform:rotate(-4deg);}
+.tag > h3 {  color:inherit; margin:0;}
+.tag:hover { background-color:rgba(255,0,0,.6);}
 .tag2 { background:white; padding:5px; border:#CCCCCC solid 1px; color:RED; display:inline-block;  }
 
 /* For Footer*/
@@ -140,3 +142,11 @@ background:url(../img/bg.jpg); background-size:contain;
 .art-pre-info { padding:20px; width:auto;}
 .art-pre-info > h3 { margin-bottom:10px; color:#FF0000; font-size:1.2em; font-weight:bold;}
 .art-pre-info > p { color:black; margin-bottom:0px;}
+
+
+
+/* for edit*/
+.control-outer { position:relative; display:none;}
+.control-outer > *{ position:absolute;}
+.admin-btns > li { float:left;}
+.admin-btn:hover { opacity:.6; }
